Fixing blockquote spacing and moderated comment spacing

--- a/ArticleTemplates/css/scss/partials/_discussion.scss
+++ b/ArticleTemplates/css/scss/partials/_discussion.scss
@@ -49,6 +49,10 @@
 			margin-right: cols($base-4, 1);
 			margin-left: cols($base-4, 5);
 		}
+		
+		blockquote:first-child {
+			@include margin (1, 0);
+		}
 
 		p:last-child {
 			margin-bottom: 0px;
@@ -273,6 +277,7 @@
 	// Blocked
 	&.blocked {
 		color: $meta;
+		@include padding(1, 0, 0, 0);
 		.discussion__header {
 			opacity: 0.5;
 		}
