--- a/ArticleTemplates/css/style.css
+++ b/ArticleTemplates/css/style.css
@@ -680,6 +680,8 @@ ul.tabs {
       .discussion .discussion__body {
         margin-right: 5.26316%;
         margin-left: 30.52632%; } }
+    .discussion .discussion__body blockquote:first-child {
+      margin: 12px 0px 12px 0px; }
     .discussion .discussion__body p:last-child {
       margin-bottom: 0px; }
   .discussion .discussion__avatar {
@@ -861,7 +863,8 @@ ul.tabs {
   .discussion.is-response-hidden {
     display: none; }
   .discussion.blocked {
-    color: #999999; }
+    color: #999999;
+    padding: 12px 0px 0px 0px; }
     .discussion.blocked .discussion__header {
       opacity: 0.5; }
     .discussion.blocked .discussion__recommend {
